fix-display-score

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 <div class="grade-details">
                     <p>Your final score is : <span id="right-answers"></span></p>
                     <p>Enter Initial: <textarea id="initial"></textarea></p>
-                    <p>Score: <span id="display-initial"></span> <span id="display-score"></span></p>
+                    <p>Score: </p>
+                    <span id="your-initial"></span> <span id="your-score"></span>
                 </div>
 
                 <div class="score-button-container">
