--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
                 <div class="grade-details">
                     <p>Your final score is : <span id="right-answers"></span></p>
                     <p>Enter Initial: <textarea id="initial"></textarea></p>
-                    <p>Score: </p>
+                    <h1>Highscore: </h1>
                     <span id="your-initial"></span> <span id="your-score"></span>
                 </div>
 
                 <div class="score-button-container">
                     <button id="scoreboard-button">Submit score</button>
+                    <button id="clear-score" onclick="clear()">Clear Highscore</button>
                 </div>
 
             </div>
